<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/black"
              android:orientation="vertical"
              android:padding="15dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:text="@string/test_menu"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/call_now"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/text_now"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/test_alerts"
        android:textSize="18sp" />


</LinearLayout>
